fixed search result alignment
Sometimes, search results i.e. channels would lose there horizontal alignment when some of the results had no description.
A quick patch has been applied to the css template.

--- a/style.css
+++ b/style.css
@@ -316,6 +316,7 @@ Wide styles
 	height: 8em;
 
 }
+	a p { min-height: 2em; }
 	.header { padding: 1.5em 3em; }
 	.nav-bar {
 		padding: 1em 3em;
